--- a/en/finalProject.html
+++ b/en/finalProject.html
@@ -30,7 +30,7 @@
 		    <li><a href="design-thinking/practica5.html">Prototype and Test</a></li>
                 </ul>
              </li>
-            <li><a href="finalProject.html">Final Project</a>
+            <li><a href="finalProject.html">Digital Manufacturing Project</a>
                 <ul>
                     <li><a href="proyecto-final/semana1.html">Development of the website</a></li>
                     <li><a href="proyecto-final/semana2.html">Design Development</a></li>
