--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -82,6 +82,7 @@ Para poder desarrollar la empatía no basta con observar a los usuarios, sino in
             <div class="team__item">
                 <div class="team__item__img">
                     <img src="img/definir.jpeg" alt="">
+			</div>
                                       
                              		
                 </div>
