--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -61,9 +61,9 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">COMPRENDER</p>
-                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
-Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
-</p>
+                    <p class="think__details__info__cont">En esta etapa se conoce más profundo al comprador, entablamos una conversación con él en la que nos compartirá sus necesidades. No sólo se trata de conocer datos y estadísticas, es comprender la vida de nuestros clientes, así como los diferentes problemas y necesidades que poseen.
+Puede ser difícil desarrollar un grado de empatía con nuestros clientes finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+.</p>
 			         <div class="think">
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
@@ -73,8 +73,7 @@ Para poder desarrollar la empatía no basta con observar a los usuarios, sino in
 		</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">DEFINIR</p>
-                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
-Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+                    <p class="think__details__info__cont">En la primera fase reconocimos una gran variedad de problemas y necesidades. Ya que no todos esos problemas tienen solución o simplemente no puedes solucionar todos los problemas de los clientes  finales. Es esencial, entonces, definir cuáles son aquellos problemas del cliente De tal manera, al tener una serie de problemas específicos puedes centrarte en tomar las medidas necesarias para llegar a una solución definitiva.
 </p>
 			         <div class="think">
                                   <div class="think__img">
@@ -87,8 +86,7 @@ Para poder desarrollar la empatía no basta con observar a los usuarios, sino in
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">IDEAR</p>
-                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
-Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+                    <p class="think__details__info__cont">Empieza el proceso de ideas en base a los problemas anteriormente establecidos. Su objetivo es tener muchas alternativas de solución y no ir en busca de la mejor solución, al menos de momento
 </p>
 			       <div class="think">
                                   <div class="think__img">
@@ -99,16 +97,19 @@ Para poder desarrollar la empatía no basta con observar a los usuarios, sino in
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">PROTOTIPAR</p>
-                    <p class="think__details__info__cont">El propósito de esta fase es convertir la idea o solución a la que has llegado en un prototipo digital o físico. No necesariamente debe ser un objeto, sino también un dibujo o incluso un guión gráfico. Los prototipos pueden ser elaborados con materiales como papel, cartón, plastilina o bloques de lego. Usualmente se emplean estos materiales económicos cuando el proyecto se encuentra en sus etapas iniciales y se va mejorando conforme el proyecto va mostrando progresos.</p>
+                    <p class="think__details__info__cont">Empieza el proceso de ideas en base a los problemas anteriormente establecidos. Su objetivo es tener muchas alternativas de solución y no ir en busca de la mejor solución, al menos de momento</p>
 			      <div class="think">
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1NKDI1Qidbmo1T9YfXdU0mIVuLbfj_mQb/view?usp=sharing" class="think__details__extra__description">IMAGEN</a>
                                                                                     </div>
+				      <p class="think__details__info__cont"><p class="think__details__info__cont">en la imagen se puede observar que las integrantes del grupo estan buscando ideas, para solucionar el problema de los espacion reducidos</p></p>
                                   
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">EVALUAR</p>
-                    <p class="think__details__info__cont">En esta etapa se realizan pruebas con los prototipos realizados previamente y se solicita a los usuarios sus opiniones y comentarios al respecto, en base al uso de los prototipos. Es una fase esencial en el Design Thinking pues ayuda a identificar errores y posibles carencias que puede tener el producto. En base a las pruebas se pueden presentar diversas mejoras sobre el producto.</p>
+                    <p class="think__details__info__cont">Esta es la etapa donde se relizan las  pruebas con los prototipos y se solicita a los usuarios sus opiniones y comentarios al respecto, en base al uso de los prototipos. Es una fase esencial en el Design Thinking pues nos ayudara a identificar los que puede tener el producto. 
+Explicación de las cinco Etapas del Design Thinking hacia nuestro proyecto 
+.</p>
 			      <div class="think">
                                   <div class="think__img">
                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/e12ENUpav0U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
