--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -85,8 +85,7 @@ Puede ser difícil desarrollar un grado de empatía con nuestros clientes finale
                 </div>	
                 <div class="think__details__info">
                     <p class="think__details__info__title">IDEAR</p>
-                    <p class="think__details__info__cont">Empieza el proceso de ideas en base a los problemas anteriormente establecidos. Su objetivo es tener muchas alternativas de solución y no ir en busca de la mejor solución, al menos de momento
-</p>
+                    <p class="think__details__info__cont">Empieza el proceso de ideas en base a los problemas anteriormente establecidos. Su objetivo es tener muchas alternativas de solución y no ir en busca de la mejor solución, al menos de momento</p>
 			       <div class="think">
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1sGTOCchcO17oGh7JtJ3A0fzkObJOXyId/view?usp=sharing" class="think__details__extra__description">IMAGEN</a>
