--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -53,22 +53,19 @@
             </div>
         </div>
 
-        <div class="think">
-            
-            <div class="think__details">
-                <div class="think__details__icon">
-                    <i class="icon-chaplin-hat-movie-streamline"></i>
+        </div>
+        <div class="design">
+            <div class="design__item">
+                <div class="design__item__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
                 </div>
-                <div class="think__details__info">
-                    <p class="think__details__info__title">COMPRENDER</p>
-                    <p class="think__details__info__cont">En esta etapa se conoce más profundo al comprador, entablamos una conversación con él en la que nos compartirá sus necesidades. No sólo se trata de conocer datos y estadísticas, es comprender la vida de nuestros clientes, así como los diferentes problemas y necesidades que poseen.
-Puede ser difícil desarrollar un grado de empatía con nuestros clientes finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
-.</p>
-			         <div class="think">
-                                  <div class="think__img">
-					                                            <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
-                                                                                    </div>
-                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aQklQcCIWZw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="design__item__info">
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar y Definir</a>
+                    <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
+                </div>
+                <div class="design__item__img">
+                    <img src="img/empatizar.png" alt="">
+                </div>
 			
 		</div>
                 <div class="think__details__info">
