--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -63,6 +63,9 @@
                     <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar y Definir</a>
                     <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
                 </div>
+		                                                                    <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
+                                                                                    </div>
+		       <iframe width="560" height="315" src="https://www.youtube.com/embed/e12ENUpav0U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <div class="design__item__img">
                     <img src="img/empatizar.png" alt="">
                 </div>
