--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -60,8 +60,27 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar y Definir</a>
-                    <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar </a>
+                    <p class="design__item__info__details">En esta etapa se conoce más profundo al comprador, entablamos una conversación con él en la que nos compartirá sus necesidades. No sólo se trata de conocer datos y estadísticas, es comprender la vida de nuestros clientes, así como los diferentes problemas y necesidades que poseen.
+Puede ser difícil desarrollar un grado de empatía con nuestros clientes finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+</p>
+                </div>
+		                                                                    <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
+                                                                                    </div>
+		       <iframe width="560" height="315" src="https://www.youtube.com/embed/aQklQcCIWZw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="design__item__img">
+                    <img src="img/empatizar.png" alt="">
+                </div>
+		
+		</div>
+        <div class="design">
+            <div class="design__item">
+                <div class="design__item__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
+                </div>
+                <div class="design__item__info">
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">Definir</a>
+                    <p class="design__item__info__details">En la primera fase reconocimos una gran variedad de problemas y necesidades. Ya que no todos esos problemas tienen solución o simplemente no puedes solucionar todos los problemas de los clientes  finales. Es esencial, entonces, definir cuáles son aquellos problemas del cliente De tal manera, al tener una serie de problemas específicos puedes centrarte en tomar las medidas necesarias para llegar a una solución definitiva..</p>
                 </div>
 		                                                                    <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
                                                                                     </div>
@@ -77,8 +96,9 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar y Definir</a>
-                    <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">Idear</a>
+                    <p class="design__item__info__details"> Empieza el proceso de ideas en base a los problemas anteriormente establecidos. Su objetivo es tener muchas alternativas de solución y no ir en busca de la mejor solución, al menos de momento. 
+Y LLEGAMOS A LA CONCLUSION QUE TIENE QUE EXISTIR MUEBLES PLEGABLES</p>
                 </div>
 		                                                                    <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
                                                                                     </div>
@@ -94,8 +114,8 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar y Definir</a>
-                    <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">Prototipar</a>
+                    <p class="design__item__info__details">El propósito de esta fase es convertir la idea o solución a la que has llegado en un prototipo digital o físico. Los prototipos pueden ser elaborados con materiales como papel, cartón, plastilina o bloques de lego, o usar programas como el rhinoceros o AutoCAT, entre otros.</p>
                 </div>
 		                                                                    <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
                                                                                     </div>
@@ -111,25 +131,9 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar y Definir</a>
-                    <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
-                </div>
-		                                                                    <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
-                                                                                    </div>
-		       <iframe width="560" height="315" src="https://www.youtube.com/embed/e12ENUpav0U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <div class="design__item__img">
-                    <img src="img/empatizar.png" alt="">
-                </div>
-		
-		</div>
-        <div class="design">
-            <div class="design__item">
-                <div class="design__item__icon">
-                    <i class="icon-speech-streamline-talk-user"></i>
-                </div>
-                <div class="design__item__info">
-                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar y Definir</a>
-                    <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">Evaluar</a>
+                    <p class="design__item__info__details">Esta es la etapa donde se relizan las  pruebas con los prototipos y se solicita a los usuarios sus opiniones y comentarios al respecto, en base al uso de los prototipos. Es una fase esencial en el Design Thinking pues nos ayudara a identificar los que puede tener el producto. 
+Explicación de las cinco Etapas del Design Thinking hacia nuestro proyecto </p>
                 </div>
 		                                                                    <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
                                                                                     </div>
