--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -99,10 +99,14 @@ Puede ser difícil desarrollar un grado de empatía con nuestros clientes finale
                     <a href="design-thinking/practica2.html" class="design__item__info__title">Idear</a>
                     <p class="design__item__info__details"> Empieza el proceso de ideas en base a los problemas anteriormente establecidos. Su objetivo es tener muchas alternativas de solución y no ir en busca de la mejor solución, al menos de momento. 
 Y LLEGAMOS A LA CONCLUSION QUE TIENE QUE EXISTIR MUEBLES PLEGABLES</p>
-			
+			</div>
+                <div class="design__item__img">
+                    <img src="img/idear.jpeg" alt="">
                 </div>
+		
 		                                                                    <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
                                                                                     </div>
+		
 		      
                 <div class="design__item__img">
                     <img src="img/empatizar.png" alt="">
