--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -46,7 +46,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Idear</h1>
+                <h1>Taller de Desing Thinking</h1>
             </div>
             <div class="think__title__content">
                 <p> En este taller se explica previamente los 5 pasos necesarios para realizar el proyecto de Desing Thinking</p>
