--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -51,7 +51,7 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/bosquejo.jpg" alt="">
+                <img src="../img/planos.jpeg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -65,11 +65,11 @@
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterios</p>
                     <p class="think__details__extra__description">1.- Diseñan la página web donde crean tres pestañas: 1.- Inicio Acerca de nosotros, describen background y sus contactos.
-2.- Diseñan la pagina web donde crean tres pestañas: 2.- Design Thinking donde describen las 5 etapas y crean sub-enlaces donde agregaran los avances según el cronograma de actividades.
-3.- Diseñan la pagina web donde crean tres pestañas: 3.- Poryecto de Fabricación Digital donde describen cada una de las etapas según el cronograma de actividades.
-4.- La página web está en versión español e inglés.
-5.- Seleccionan la propuesta del proyecto de fabricación digital teniendo en cuenta el impacto social económico. La propuesta deberá tener uno o varios cliente
-6.- La fabricación de la propuesta presenta elementos adicioanles al trabajo ( por ejemplo adicionarle elementos electrócnicos, programación para un proyecto de corte en láser).</p>
+<p2.- Diseñan la pagina web donde crean tres pestañas: 2.- Design Thinking donde describen las 5 etapas y crean sub-enlaces donde agregaran los avances según el cronograma de actividades.</p>
+<p3.- Diseñan la pagina web donde crean tres pestañas: 3.- Poryecto de Fabricación Digital donde describen cada una de las etapas según el cronograma de actividades.</p>
+<p4.- La página web está en versión español e inglés.</p>
+<p5.- Seleccionan la propuesta del proyecto de fabricación digital teniendo en cuenta el impacto social económico. La propuesta deberá tener uno o varios cliente</p>
+<p6.- La fabricación de la propuesta presenta elementos adicioanles al trabajo ( por ejemplo adicionarle elementos electrócnicos, programación para un proyecto de corte en láser).</p>
                      </div>
                      <a href="https://drive.google.com/file/d/1DTYdH4GWW6e9u6Tp8myxssL32s7XD7zl/view?usp=sharing" class="think__details__extra__description">Documento - Diagrama de Gantt</a>
             <div class="team__item">
