--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -64,7 +64,7 @@
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterios</p>
-                    <p class="think__details__extra__description">1.- Diseñan la página web donde crean tres pestañas: 1.- Inicio Acerca de nosotros, describen background y sus contactos.
+                    <p class="think__details__extra__description">1.- Diseñan la página web donde crean tres pestañas: 1.- Inicio Acerca de nosotros, describen background y sus contactos.</p>
                        <p 2.- Diseñan la pagina web donde crean tres pestañas: 2.- Design Thinking donde describen las 5 etapas y crean sub-enlaces donde agregaran los avances según el cronograma de actividades.</p>
                        <p 3.- Diseñan la pagina web donde crean tres pestañas: 3.- Poryecto de Fabricación Digital donde describen cada una de las etapas según el cronograma de actividades.</p>
                        <p 4.- La página web está en versión español e inglés.</p>
