--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -29,7 +29,7 @@
                         <li><a href="../design-thinking/practica5.html">Práctica 5</a></li>
                     </ul>
                  </li>
-                <li><a href="../finalProject.html">Proyecto Final</a>
+                <li><a href="../finalProject.html">Proyecto de Fabricacion Digital</a>
                     <ul>
                         <li><a href="semana1.html">Semana 1</a></li>
                         <li><a href="semana2.html">Semana 2</a></li>
@@ -58,7 +58,7 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Gestion de Proyectos/p>
+                    <p class="think__details__info__title">Gestion de Proyectos
                     <p class="think__details__info__cont">Desarrollamos una pagina web , donde contenia los primeros temas de nuestro proyecto para el design thinking, donde ambos se basan en lo mismo que es la problematica de falta de espacio en departamento</p>
                 </div>
 
@@ -88,7 +88,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2017 - Diseñado por: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
                 </div>
             </div>
         </footer>
