--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -59,13 +59,25 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Planos del Proyecto</p>
-                    <p class="think__details__info__cont">Para la realizacion de los planos para el proyecto se utilizo el programa Rhinoceros , el cual nos facilito realizar las medidas adecuadas , y prototipar el modelo real </p>
+                    <p class="think__details__info__cont">Para la realizacion de los planos para el proyecto se utilizo el programa Rhinoceros , el cual nos facilito realizar las medidas adecuadas , y prototipar el modelo real . Este plano posee parametros flexibles para cualquier cambio rapido </p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">ARCHIVO</p>
+                    <p class="think__details__extra__title">ARCHIVO DE RHINOCEROS - PLANOS</p>
                     <p class="think__details__extra__description"> </p>
-                    <a href="https://drive.google.com/file/d/1tZgIzuuvwAd2iXyPF_UIHHij5c7-UL-Q/view?usp=sharing" target="_blank">PLANOS</a>
+                    <a href="https://drive.google.com/file/d/1xZzzufTMO5obWbBBZX3deLNzD7bGBfXJ/view?usp=sharing" target="_blank">PLANOS</a>
+                </div>
+		    
+	        <div class="think__details__extra">
+                    <p class="think__details__extra__title">ARCHIVO EN PDF - PLANOS</p>
+                    <p class="think__details__extra__description"> </p>
+                    <a href="https://drive.google.com/file/d/1XiTk1PQXjzI8IXjwFo0Pq6K6w6_CBdNo/view?usp=sharing" target="_blank">PLANOS</a>
+                </div>
+		    
+		    <div class="think__details__extra">
+                    <p class="think__details__extra__title">INFORME SOBRE PLANOS</p>
+                    <p class="think__details__extra__description"> </p>
+                    <a href="https://drive.google.com/file/d/1_S1j11lthHXDQQZlStW-cASrrpaZElk9/view?usp=sharing" target="_blank">PLANOS</a>
                 </div>
 		         </div>
                          <div class="think">
