--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -77,7 +77,7 @@
 		    <div class="think__details__extra">
                     <p class="think__details__extra__title">INFORME SOBRE PLANOS</p>
                     <p class="think__details__extra__description"> </p>
-                    <a href="https://drive.google.com/file/d/1_S1j11lthHXDQQZlStW-cASrrpaZElk9/view?usp=sharing" target="_blank">PLANOS</a>
+                    <a href="https://drive.google.com/file/d/1_S1j11lthHXDQQZlStW-cASrrpaZElk9/view?usp=sharing" target="_blank">INFORME</a>
                 </div>
 		         </div>
                          <div class="think">
