--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -83,6 +83,12 @@
                          <div class="think">
                          <div class="think__img">
                               <img src="../img/calculo.png" alt="">
+				 
+     <p class="think__details__info__cont"> <p class="think__details__info__cont">En este video se puede apreciar como fue la realizacion de los planos en Rhinoceros con sus medidas parametricas para la facilidad de cualquier cambio</p>      
+     <div class="think">
+     <div class="think__img">
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/_wFkxdm9_5w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
             </div>
 		    
             </div>
