--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -46,7 +46,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Semana 2</h1>
+                <h1>Desarrollo del Diseño</h1>
             </div>
         </div>
         <div class="think">
