--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -79,6 +79,12 @@
                     <p class="think__details__extra__description"> </p>
                     <a href="https://drive.google.com/file/d/1_S1j11lthHXDQQZlStW-cASrrpaZElk9/view?usp=sharing" target="_blank">INFORME</a>
                 </div>
+		    
+		    </div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">Caracteristicas de la Maquina</p>
+                    <p class="think__details__info__cont"></p>
+                </div>
 		         </div>
                          <div class="think">
                          <div class="think__img">
