--- a/en/design-thinking/practica2.html
+++ b/en/design-thinking/practica2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Design Thinking - Practice 2</title>
+    <title>Design Thinking - Gestion de proyecto y Planteamiento del Problema</title>
 </head>
 <body>
     <div id="top">
@@ -22,21 +22,22 @@
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="practica1.html">Práctice 1</a></li>
-                    <li><a href="practica2.html">Practice 2</a></li>
-                    <li><a href="practica3.html">Practice 3</a></li>
-                    <li><a href="practica4.html">Practice 4</a></li>
-                    <li><a href="practica5.html">Practice 5</a></li>
+                    <li><a href="design-thinking/practica1.html">Design of the web page and approach of the Design Thinking Project</a></li>
+                    <li><a href="design-thinking/practica2.html">Design Thinking Workshop</a></li>
+                    <li><a href="design-thinking/practica3.html">Empathize</a></li>
+                    <li><a href="design-thinking/practica4.html">Define.</a></li>
+                    <li><a href="design-thinking/practica5.html">Devise.</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototype and Test</a></li>
                 </ul>
              </li>
-            <li><a href="../finalProject.html">Final Project</a>
+            <li><a href="../finalProject.html">Proyecto de Fabricacion Digital</a>
                 <ul>
-                    <li><a href="../final-project/semana1.html">Week 1</a></li>
-                    <li><a href="../final-project/semana2.html">Week 2</a></li>
-                    <li><a href="../final-project/semana3.html">Week 3</a></li>
-                    <li><a href="../final-project/semana4.html">Week 4</a></li>
-                    <li><a href="../final-project/semana5.html">Week 5</a></li>
-                    <li><a href="../final-project/semana6.html">Week 6</a></li>
+                    <li><a href="proyecto-final/semana1.html">Development of the Website</a></li>
+                    <li><a href="proyecto-final/semana2.html">Development of the Design</a></li>
+                    <li><a href="proyecto-final/semana3.html">Project execution</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentation Part 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Final presentation</a></li>
+                    <li><a href="proyecto-final/semana6.html">Project Fair</a></li>
                 </ul>
             </li>
 		</ul>
@@ -45,10 +46,10 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Empathize and Define</h1>
+                <h1>Project Management and Problem Planning</h1>
             </div>
             <div class="think__title__content">
-                <p>In this second part of the Design Thinking methodology we will cover the second objective: <br> Develop empathy with users, by observing them. Therefore, it is a methodology based on observing the user.</p>
+                <p>Project management is a methodical approach to plan and guide project processes from start to finish:  <br> Develop empathy with users, by observing them. Therefore, it is a methodology based on observing the user.</p>
             </div>
         </div>
 
@@ -61,36 +62,46 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Empathize and Define</p>
-                    <p class="think__details__info__cont">Then the problem "Failures in the cafeteria" was defined, we visualized all the faults that it presents when selling a product and when attending, to obtain concise data, we proceeded to develop a set of thirty questions to understand how you feel about the service of the coffee shops.</p>
+                    <p class="think__details__info__title">Project Management and Problem Planning</p>
+                    <p class="think__details__info__cont">The elements to pose a problem are 3 and are related to each other and are the questions of the research, the objectives and the justification of the study. We will begin by referring to the approach of the problem and the delimitation, and then we will see the subject of these objectives.</p>
                 </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Answers</p>
-                    <p>In the present document the total analysis of the problem is shown, based on the responses of the respondents.</p>
-                    <a href="https://drive.google.com/file/d/0B9nFLiw-DDCCbHJmMjVDSzluYVk/view" target="_blank" class="think__details__extra__description">Document - Answers</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Respuestas Encuesta</p>
-                    <p>In the present file shows in detail the results of the survey to the students, about the service of attention in both cafeterias.</p>
-                    <a href="https://drive.google.com/file/d/0B9nFLiw-DDCCdldBX3ZlbnNBOG8/view" target="_blank" class="think__details__extra__description">Document - survey answer</a>
-                </div>
+                    <p>1.The Design Thinking project proposal is oriented to the Human, has feasibility and is functional. And they are involved:
+
+We chose this idea since two compañeras of our group live in apartments which are of small dimensions, besides that nowadays most of the families live in these apartments with limited space. The project objective will be to provide the necessary furniture creating accessible spaces without having to do without some things because of the limited space. </p>
+                     <p>  2.	The proposal is of high social, economic impact:
+It will greatly help society so that they can feel comfortable in apartments with limited space, as well as being affordable furniture for all.</p>
+                      <p> 3.	The work team has the competences to develop the project:
+The team has the help of a carpenter (father of a member) expert in manufacturing furniture for the home.</p>
+                      <p> 4.	The proposal is based on the reality and opportunities for innovation within the region:
+Even in our region these furniture is not offered, so it is an opportunity for innovation with help to society
+.</p>
+			<a href="https://drive.google.com/file/d/1DTYdH4GWW6e9u6Tp8myxssL32s7XD7zl/view?usp=sharing" class="think__details__extra__description">Documento - Diagrama de Gantt</a>
             </div>
+                   
+             </div>
+   <div class="think__details__info">
+   <p class="think__details__info__title">ADDITIONAL ELEMENTS</p>
+         <p class="think__details__info__cont">The additional elements to the projects that we are making are of agreement to the consumed in which we are focused, these would be color paintings that the client prefers, varnishes decorative papers and some special carving with some special name, a type of design will be made in the Furniture edges' to give a better finish to the project</p>
+           </div>
+		</div>
         </div>
     </div>
     <footer id="footer">
-        <div class="footer">
-            <div class="footer__licencia">
-                <p>License:</p>
-                <img src="../../img/licencia.png" alt="">
+            <div class="footer">
+                <div class="footer__licencia">
+                    <p>Licencia:</p>
+                    <img src="../img/licencia.png" alt="">
+                </div>
+                <div class="footer__copy">
+                    <img src="../img/fablab.png" alt="">
+                    <p>&copy; 2017 - Diseñado por: <a href="maria.soto@tecsup.edu.pe">JMaria de los Angeles Soto Torres</a></p>
+                </div>
             </div>
-            <div class="footer__copy">
-                <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
-            </div>
-        </div>
-    </footer>
-    <script src="../../js/script.js"></script>
+        </footer>
+    <script src="../js/script.js"></script>
 	<script>
 		edgrid.menu('main-nav','main-menu');
 	</script>
