--- a/en/design-thinking/practica2.html
+++ b/en/design-thinking/practica2.html
@@ -78,7 +78,7 @@ The team has the help of a carpenter (father of a member) expert in manufacturin
                       <p> 4.	The proposal is based on the reality and opportunities for innovation within the region:
 Even in our region these furniture is not offered, so it is an opportunity for innovation with help to society
 .</p>
-			<a href="https://drive.google.com/file/d/1DTYdH4GWW6e9u6Tp8myxssL32s7XD7zl/view?usp=sharing" class="think__details__extra__description">Documento - Diagrama de Gantt</a>
+			<a href="https://drive.google.com/file/d/1DTYdH4GWW6e9u6Tp8myxssL32s7XD7zl/view?usp=sharing" class="think__details__extra__description">Document - Gantt diagram</a>
             </div>
                    
              </div>
