--- a/en/final-project/semana1.html
+++ b/en/final-project/semana1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Final Project - Week 1</title>
+    <title>Design Thinking - Project Management and Problem Statement</title>
 </head>
 <body>
     <div id="top">
@@ -22,21 +22,22 @@
 		<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="../design-thinking/practica1.html">Practice 1</a></li>
-                    <li><a href="../design-thinking/practica2.html">Practice 2</a></li>
-                    <li><a href="../design-thinking/practica3.html">Practice 3</a></li>
-                    <li><a href="../design-thinking/practica4.html">Practice 4</a></li>
-                    <li><a href="../design-thinking/practica5.html">Practice 5</a></li>
+                    <li><a href="design-thinking/practica1.html">Design of the web page and approach of the Design Thinking Project</a></li>
+                    <li><a href="design-thinking/practica2.html">Design Thinking Workshop</a></li>
+                    <li><a href="design-thinking/practica3.html">Empathize</a></li>
+                    <li><a href="design-thinking/practica4.html">Define.</a></li>
+                    <li><a href="design-thinking/practica5.html">Devise.</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototype and Test</a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Final Project</a>
                 <ul>
-                    <li><a href="semana1.html">Week 1</a></li>
-                    <li><a href="semana2.html">Week 2</a></li>
-                    <li><a href="semana3.html">Week 3</a></li>
-                    <li><a href="semana4.html">Week 4</a></li>
-                    <li><a href="semana5.html">Week 5</a></li>
-                    <li><a href="semana6.html">Week 6</a></li>
+                    <li><a href="proyecto-final/semana1.html">Development of the Website</a></li>
+                    <li><a href="proyecto-final/semana2.html">Development of the Design</a></li>
+                    <li><a href="proyecto-final/semana3.html">Project execution</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentation Part 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Final presentation</a></li>
+                    <li><a href="proyecto-final/semana6.html">Project Fair</a></li>
                 </ul>
             </li>
 		</ul>
@@ -45,39 +46,53 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Week 1</h1>
+                <h1>Project Management and Problem Planning</h1>
+		    </div>
+            <div class="think__title__content">
+                <p>Project management is a methodical approach to planning and guiding project processes from start to finish: <br></p>
             </div>
         </div>
 
         <div class="think">
             <div class="think__img">
-                <img src="../../img/bosquejo.jpg" alt="">
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/G7ei6EMHE5I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
+		
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Gant Diagram - Sketch - Functional Decomposition</p>
-                    <p class="think__details__info__cont">In this file it will be possible to visualize the use of the techniques to be able to start implementing the project of the security system from a mobile application based on the research carried out by the members of the group.</p>
+                    <p class="think__details__info__title">Project Management and Problem Planning</p>
+                    <p class="think__details__info__cont">The elements to pose a problem are 3 and are related to each other and are the questions of the research, the objectives and the justification of the study. We will begin by referring to the approach of the problem and the delimitation, and then we will see the subject of these objectives.The elements to pose a problem are 3 and are related to each other and are the questions of the research, the objectives and the justification of the study. We will begin by referring to the approach of the problem and the delimitation, and then we will see the subject of these objectives.</p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Gant Diagram</p>
-                    <p>The Gantt chart is a graphical tool whose objective is to expose the expected dedication time for different tasks or activities over a given total time; in this case we will use it to start up the security system project.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1oWtL5qB9TuM4tY1GiGK4lFBtQJbUiG-b" target="_blank">Archive - Gant's diagram</a></div>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Initial Draft</p>
-                    <p>The sketch represents the first concrete step of the work, that is, the first materialization of the author's idea. In this case the first prototype design of the possible circuit and the operation of the camera.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Document - Initial Draft</a></div>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Functional Decomposition</p>
-                    <p>Functional decomposition refers broadly to the process of solving a functional relation in its constituent parts, in such a way that the original function can be reconstructed (ie, recomposed) of the parts according to the composition. <br>
-                    In the project was applied to recognize the components and know about each of them, as well as its operation.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Document - Functional Decomposition</a></div>
-                </div>
+                    <p class="think__details__extra__title">Answers/p>
+                    <p>1.The Design Thinking project proposal is oriented to the Human, has feasibility and is functional. And they are involved:
+
+We chose this idea since two compañeras of our group live in apartments which are of small dimensions, besides that nowadays most of the families live in these apartments with limited space. The project objective will be to provide the necessary furniture creating accessible spaces without having to do without some things because of the limited space. </p>
+                     <p>  2.	The proposal is of high social, economic impact:
+It will greatly help society so that they can feel comfortable in apartments with limited space, as well as being affordable furniture for all.</p>
+                      <p> 3.	The work team has the competences to develop the project:
+The team has the help of a carpenter (father of a member) expert in manufacturing furniture for the home.</p>
+                      <p> 4.	The proposal is based on the reality and opportunities for innovation within the region:
+Even in our region these furniture is not offered, so it is an opportunity for innovation with help to society</p> 
+			 <a href="https://drive.google.com/file/d/1DTYdH4GWW6e9u6Tp8myxssL32s7XD7zl/view?usp=sharing" class="think__details__extra__description">Document - Gantt chart</a>
+                  </div>
+		    
+		    <div class="think">
+            <div class="think__img">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/09mYzJynjqY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            
+                    <a href="https://drive.google.com/file/d/1PfcLy8M9zWM1FF2uAUGibj_9m2UwW2On/view?usp=sharing" class="think__details__extra__description">CUSTOMER'S INFORMATION</a>
+            </div>
+ </div>
+   <div class="think__details__info">
+   <p class="think__details__info__title">ADDITIONAL ELEMENTS</p>
+         <p class="think__details__info__cont">The additional elements to the projects that we are making are of agreement to the consumed in which we are focused, these would be color paintings that the client prefers, varnishes decorative papers and some special carving with some special name, a type of design will be made in the Furniture edges' to give a better finish to the projectv</p>
+           </div>
+ 
             </div>
         </div>
     </div>
@@ -89,7 +104,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                <p>&copy; 2017 - Designed by: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
             </div>
         </div>
     </footer>
