--- a/en/final-project/semana1.html
+++ b/en/final-project/semana1.html
@@ -55,9 +55,8 @@
 
         <div class="think">
             <div class="think__img">
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/G7ei6EMHE5I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <img src="../img/planos.jpeg" alt="">
             </div>
-		
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
