--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -89,7 +89,14 @@
                          <div class="think">
                          <div class="think__img">
                               <img src="../img/calculo.png" alt="">
-				 
+			
+      <p class="think__details__info__cont"> <p class="think__details__info__cont">En este video se muestra la manera en que se trabajo en el programa Rhinoceros, mostrando como se utiliza los parametros flexibles para cualquier tipo de cambio </p>      
+     <div class="think">
+     <div class="think__img">
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/_IhxzmkdUf8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+		
+	     
      <p class="think__details__info__cont"> <p class="think__details__info__cont">En este video se puede apreciar como fue la realizacion de los planos en Rhinoceros con sus medidas parametricas para la facilidad de cualquier cambio</p>      
      <div class="think">
      <div class="think__img">
