--- a/en/final-project/semana2.html
+++ b/en/final-project/semana2.html
@@ -93,6 +93,8 @@
      <p class="think__details__info__cont"> <p class="think__details__info__cont">In this video you can see how was the realization of the plans in Rhinoceros with its parametric measurements for the ease of any change</p>      
      <div class="think">
      <div class="think__img">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/_IhxzmkdUf8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>     
+	     
      <iframe width="560" height="315" src="https://www.youtube.com/embed/_wFkxdm9_5w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
             </div>
