--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -45,7 +45,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Prototipar y Probar</h1>
+                <h1>Empatizar</h1>
             </div>
             <div class="think__title__content">
                 <p>En este documento se desarrollará el quinto y sexto objetivo del Desing Thinking: <br> Construir prototipos de las ideas más prometedoras. <br> Aprender a partir de las reacciones de los usuarios al interactuar con el prototipo. Por tanto, es necesario dejar que prueben el producto mediante los prototipos desarrollados, y recabar información gracias a dicha interacción.</p>
