--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -48,8 +48,9 @@
                 <h1>Empatizar</h1>
             </div>
             <div class="think__title__content">
-                <p>En este documento se desarrollará el quinto y sexto objetivo del Desing Thinking: <br> Construir prototipos de las ideas más prometedoras. <br> Aprender a partir de las reacciones de los usuarios al interactuar con el prototipo. Por tanto, es necesario dejar que prueben el producto mediante los prototipos desarrollados, y recabar información gracias a dicha interacción.</p>
-            </div>
+                <p>En este documento , se presentara informacion sobre empresas peruanas y extranjeras productoras de muebles plegables , ademas de una entrevista a un especialista en ingeneria civil que nos brindara su opinion y consejos para este proyecto</p>
+                <p> Tambien se puede documentar una encuesta realizada a personas sobre la realidad de su vivir , presentando pruebas fisicas y virtuales de esta</p>
+	    </div>
         </div>
 
         <div class="think">
