--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -62,8 +62,12 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Prototipar y Probar</p>
-                    <p class="think__details__info__cont">A partir de ello se creó un prototipo de la interfaz que se utilizara para la aplicación  primero por medio de los bosquejos a mano alzada y luego se implemento por medio de un simulador de creación. Para probar la aplicación que se desarrolló; se realizó pruebas de interacción con los usuarios.</p>
+                    <p class="think__details__info__title">Criterios de Evaluacion</p>
+                    <p class="think__details__info__cont"> 1.- Utilizan correctamente las técnicas para empatizar.</p>
+                    <p class="think__details__info__cont"> 2.- Observa y se involucra y demuestran un conocimiento amplio del tema.</p>
+		    <p class="think__details__info__cont"> 3.- Recopila variada información sobre la problemática</p>
+		    <p class="think__details__info__cont"> 4.- Publican en la pagina web los detalles de los puntos anteriores..</p>
+	
                 </div>
 
                 <div class="think__details__extra">
