--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -69,6 +69,38 @@
 		    <p class="think__details__info__cont"> 4.- Publican en la pagina web los detalles de los puntos anteriores..</p>
 	
                 </div>
+	    </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
+                </div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">EMPRESA PERUANA FABRICANTES DE MUEBLES PLEGABLES : MOSPACE PERU</p>
+                    <p class="think__details__info__cont">  Empresa Peruana que realiza camas abatibles de distintos tipos.</p>
+                    <p class="think__details__info__cont"> Las camas abatibles se fabrican tanto en tamaño individual como para matrimonio y, por lo tanto son las favoritas para acommodarse a cualquier espacio . Con un artefacto de estas caracteristicas podras plegarlo por el dia y colocarlo sobre el suelo por la noche</p>
+		    <p class="think__details__info__cont"> CONSEJOS PARA ELEGIR TU CAMA PLEGABLE: Seguro que tu mayor preocupacion es que la cama no este ajustada y pueda caerse de repente, estos muebles abatibles posee gran solidez y sus mecanismos han sido testados para un correcto funcionamiento</p>
+		    <p class="think__details__info__cont"> Estos muebles posees diversar caracteristicas como el tipo de apertura , el grosor del colchon y la escalera o barandilla de seguridad</p>
+	
+                </div>
+		    
+		    
+	    </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
+                </div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">EM PRESA EXTRANJERA FABRICANTE DE MUEBLES PLEGABLES : GARCIA HERMANOS</p>
+                    <p class="think__details__info__cont"> Esta empresa esta ubicada en Carretera Santo Domingo nº66. Apartado de Correos 123. 26280. Ezcaray, La Rioja (ESPAÑA), tambien se encuentra uhna sede en Crta. Ibiza-Sta. Eulalia Km 6’200
+07840 Sta. Eulalia, Ibiza.</p>
+                    <p class="think__details__info__cont">Esta empresa de los hermanos Garcia posee una gama de muebles </p>
+		    <p class="think__details__info__cont"> Somos la única empresa española del sector del mueble de madera con Etiqueta Ecológica Europea ECOLABEL. Esta distinción representa la máxima garantía Europea de Excelencia Medioambiental y nos diferencia poniendo en valor nuestro mobiliario plegable.
+Además de este certificado, todos nuestros muebles se certifican con bajo la normativa ISO 14001, la cual nos acredita como cumplidores de la norma internacional de sistemas de gestión ambiental (SGA).</p>
+		    <p class="think__details__info__cont"> 100% madera de haya: Todos nuestros productos son fabricados con madera de haya de primera calidad utilizando siempre madera certificada procedente de bosques gestionados de manera sostenible.
+Por ello, todos nuestros muebles se certifican con el sello PEFC que distingue a los productos procedentes de bosques certificados y que han estado sometidos a estrictos controles en su proceso de producción, a través de la cadena de custodia PEFC.
+Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de Entidades Responsables con los bosques.</p>
+	            <p Posee una variedad de muebles como : Peposapies de pies , natural y blanco tambien sillones y tumbonas</p>
+                </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
