--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -55,7 +55,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ROXyNZassIA" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ti1IDJdG6Gc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
