--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -80,7 +80,7 @@
                     <p class="think__details__info__cont"> Las camas abatibles se fabrican tanto en tamaño individual como para matrimonio y, por lo tanto son las favoritas para acommodarse a cualquier espacio . Con un artefacto de estas caracteristicas podras plegarlo por el dia y colocarlo sobre el suelo por la noche</p>
 		    <p class="think__details__info__cont"> CONSEJOS PARA ELEGIR TU CAMA PLEGABLE: Seguro que tu mayor preocupacion es que la cama no este ajustada y pueda caerse de repente, estos muebles abatibles posee gran solidez y sus mecanismos han sido testados para un correcto funcionamiento</p>
 		    <p class="think__details__info__cont"> Estos muebles posees diversar caracteristicas como el tipo de apertura , el grosor del colchon y la escalera o barandilla de seguridad</p>
-	
+	            <a href="https://drive.google.com/file/d/1RA3nNIG7S3_iaM1P_e6BPBiKp-aFAkUL/view?usp=sharing" class="think__details__extra__description"  target="_blank">Documento - Empresa Peruana</a>
                 </div>
 		    
 		    
