--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -101,6 +101,13 @@ Por ello, todos nuestros muebles se certifican con el sello PEFC que distingue a
 Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de Entidades Responsables con los bosques.</p>
 	            <p Posee una variedad de muebles como : Peposapies de pies , natural y blanco tambien sillones y tumbonas</p>
                 </div>
+		    
+        </div>
+
+        <div class="think">
+            <div class="think__img">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ti1IDJdG6Gc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
