--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -99,7 +99,7 @@ Además de este certificado, todos nuestros muebles se certifican con bajo la no
 		    <p class="think__details__info__cont"> 100% madera de haya: Todos nuestros productos son fabricados con madera de haya de primera calidad utilizando siempre madera certificada procedente de bosques gestionados de manera sostenible.
 Por ello, todos nuestros muebles se certifican con el sello PEFC que distingue a los productos procedentes de bosques certificados y que han estado sometidos a estrictos controles en su proceso de producción, a través de la cadena de custodia PEFC.
 Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de Entidades Responsables con los bosques.</p>
-	            <p Posee una variedad de muebles como : Peposapies de pies , natural y blanco tambien sillones y tumbonas</p>
+	            <p class="think__details__info__cont"> Posee una variedad de muebles como : Peposapies de pies , natural y blanco tambien sillones y tumbonas</p>
                 </div>
 		    
         </div>
