--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -111,13 +111,13 @@ Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de 
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
-                    <p>En el presente documento se muestra las interfaces de la implementación de la aplicación a mano alzada , como también la descomposición funcional de cada interfaz.</p>
-                    <a href="https://drive.google.com/file/d/1Zb2-cKHCgSbRFGzOhkTRRixtKBdDmB6Y/view?usp=sharing" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
+                    <p>En el presente documento adjuntado se apreciara la encuesta realizada a 21 personas en la localidad de Arequipa en esta muestra las respuestas que tuvieron sobre cada pregutna realizada, la cual fueron 12 preguntas.</p>
+                    <a href="https://drive.google.com/open?id=1PPBZmRs6tusLJgVFBGZ1mXamneTRx6PH" "https://drive.google.com/open?id=1glFo-rg0gW3ZbkqYlWxVqp2_aPFV_mHd" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Prototipo</p>
-                    <p>En el presente documento muestra la interfaz gráfica ya implementada de manera funcional tomando en cuenta las ideas propuestas por los alumnos.</p>
-                    <a href="https://xd.adobe.com/view/3691c97a-a8c5-4001-a027-68f6afc2ec5f/" target="_blank" class="think__details__extra__description">Prototipo</a>
+                    <p>En el presente documento adjuntado muestra la estadistica de la encuesta realizada a 21 personas.</p>
+                    <a href="https://drive.google.com/open?id=1T0NuiWtuzA7nCLUvXf3XMJ-UUZeOql-7" target="_blank" class="think__details__extra__description">Prototipo</a>
                 </div>
             </div>
         </div>
