--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -65,13 +65,13 @@
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">ARCHIVO DE RHINOCEROS - PLANOS</p>
                     <p class="think__details__extra__description"> </p>
-                    <a href="https://drive.google.com/file/d/1xZzzufTMO5obWbBBZX3deLNzD7bGBfXJ/view?usp=sharing" target="_blank">PLANOS</a>
+                    <a href="https://drive.google.com/file/d/1Ci4MUE9cheO-vYDtNGusR1TZ0dT91NJ6/view?usp=sharing"_blank">PLANOS</a>
                 </div>
 		    
 	        <div class="think__details__extra">
                     <p class="think__details__extra__title">ARCHIVO EN PDF - PLANOS</p>
                     <p class="think__details__extra__description"> </p>
-                    <a href="https://drive.google.com/file/d/1XiTk1PQXjzI8IXjwFo0Pq6K6w6_CBdNo/view?usp=sharing" target="_blank">PLANOS</a>
+                    <a href="https://drive.google.com/file/d/1-KObWYbZsOsE-BuDyZ0OuReplDu3ikx4/view?usp=sharing" target="_blank">PLANOS</a>
                 </div>
 		    
 		    <div class="think__details__extra">
