--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -115,7 +115,7 @@ Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de 
                     <a href="https://drive.google.com/open?id=1PPBZmRs6tusLJgVFBGZ1mXamneTRx6PH" "https://drive.google.com/open?id=1glFo-rg0gW3ZbkqYlWxVqp2_aPFV_mHd" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Prototipo</p>
+                    <p class="think__details__extra__title">Estadística de la encuesta</p>
                     <p>En el presente documento adjuntado muestra la estadistica de la encuesta realizada a 21 personas.</p>
                     <a href="https://drive.google.com/open?id=1T0NuiWtuzA7nCLUvXf3XMJ-UUZeOql-7" target="_blank" class="think__details__extra__description">Prototipo</a>
                 </div>
@@ -130,7 +130,7 @@ Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de 
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2017 - Diseñado por: <a href="alicia.tejada@tecsup.edu.pe">Alicia Nadine Tejada Zegarra</a></p>
                 </div>
             </div>
         </footer>
