--- a/en/design-thinking/practica5.html
+++ b/en/design-thinking/practica5.html
@@ -45,7 +45,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Digital Manufacturing</h1>
+                <h1>Empathize</h1>
             </div>
             <div class="think__title__content">
                     <p>In this document, information about Peruvian and foreign companies producing folding furniture will be presented, as well as an interview with a specialist in civil engineering who will give us their opinion and advice for this project.</p>
